--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@types/recharts": "^1.8.29",
     "@xyflow/react": "^12.4.2",
     "bpmn-js": "^18.2.0",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +27,7 @@
     "react-draggable": "^4.4.6",
     "react-social-icons": "^6.22.0",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
